packages/typ/tests/fixtures/diagnostics/0226_adt_tuple_constructor_mismatch_09.ml.expected
File "0226_adt_tuple_constructor_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0226_adt_tuple_constructor_mismatch_09 is not a valid module name.

File "0226_adt_tuple_constructor_mismatch_09.ml", line 2, characters 30-34:
2 | let _ : rec_iota = Pair_iota (true, 8)
                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
