packages/typ/tests/fixtures/diagnostics/0226_adt_tuple_constructor_mismatch_09.ml
type rec_iota = Pair_iota of int * bool
let _ : rec_iota = Pair_iota (true, 8)
